# pyTetris

./: .gitignore  constructor.py  main.py  pyproject.toml  tetris.py  view.py
